<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/backimage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selecciona_un_apartat"
        android:id="@+id/textView_titol"
        android:layout_weight="0.07"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/personatges"
        android:id="@+id/textView_character"
        android:layout_weight="0.04"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/llocs"
        android:id="@+id/textView_place"
        android:layout_weight="0.04"
        android:onClick="onClick1"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/encanteris"
        android:id="@+id/textView_spells"
        android:layout_weight="0.04"
        android:onClick="onClick2"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/objectes"
        android:id="@+id/textView_objects"
        android:layout_weight="0.04"
        android:onClick="onClick3"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Desenvolupada per: Albert Tarrés"
        android:id="@+id/textView_personal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUnloadImage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/btnUnload"
        android:layout_below="@+id/textView_objects"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_alignParentStart="true"
        android:onClick="descarregarImatge"
        android:layout_below="@+id/btnUnload"
        android:layout_above="@+id/textView_personal" />

</RelativeLayout>